crawl with Chrome

--- a/generate-urls/src/main/resources/application.properties
+++ b/generate-urls/src/main/resources/application.properties
@@ -2,4 +2,4 @@ spring.kafka.bootstrap-servers=cp01.woolford.io:9092,cp02.woolford.io:9092,cp03.
 
 digikey.seed.url=https://www.digikey.com/products/en/development-boards-kits-programmers/33?stock=1
 digikey.items.per.page=500
-user.agent=Windows95
+user.agent=Mozilla/5.0 (Macintosh; Intel Mac OS X 10_15_6) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/84.0.4147.135 Safari/537.36
