--- a/get-html/src/main/resources/application.yml
+++ b/get-html/src/main/resources/application.yml
@@ -18,7 +18,7 @@ spring:
         streams:
           binder:
             brokers: cp01.woolford.io:9092,cp02.woolford.io:9092,cp03.woolford.io:9092
-            application-id: crawler-17
+            application-id: crawler
             configuration:
               max:
                 request:
